--- a/app/assets/stylesheets/font.scss
+++ b/app/assets/stylesheets/font.scss
@@ -1,4 +1,17 @@
 @font-face {
+  font-family: 'gotham-book';
+  src: url('/assets/gotham-book.ttf') format("truetype");
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'gotham-book';
+  src: url('/assets/gotham-book-italic.ttf') format("truetype");
+  font-style: italic;
+}
+
+
+@font-face {
   font-family: 'gotham-black';
   src: url('/assets/gotham-black.ttf') format("truetype");
   font-style: normal;
