--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -2,33 +2,32 @@
         <footer class="page-footer gray">
           <div class="container">
             <div class="row">
-              <div class="col s4">
-                 <p class="uppercase white-text" style="font-size:20px;"><span class="highlight">Find</span> the right tool <br>for your inspection</p>
+              <div class="col s12 m12 l4">
+                 <p class="uppercase white-text font-thin footer-thin" style="font-size:32px;"><span class="highlight">Find</span> the right tool <br>for your inspection</p>
                  <div class="social-media"></div>
               </div>
-              <div class="col s4">
-                <p class="white-text uppercase" style="font-size:22px;font-weight:600;">Contact Info</p>
+              <div class="col s12 m12 l4">
+                <p class="white-text uppercase footer-title" >Contact Info</p>
                   <address>
-                     <p class="left-align grey-text">200 SE 1st Street, Suite 502<br>
+                     <p class="left-align grey-text font-thin nap">200 SE 1st Street, Suite 502<br>
                      Miami, FL 33131<br>
                      <br>
                      888-491-0101<br>
                      info@spiborescopes.com<br>
                      FAX: 888-871-7597</p>
                   </address>
-
               </div>
-              <div class="col s4">
-                <p class="white-text uppercase" style="font-size:22px;font-weight:600;">Payment Options</p>
-                 <img center="center-align" style="margin:0 auto;" src="https://dummyimage.com/150x100/9e9e9e/0011ff" >
-                <p class="yellow-text center-align">Financing Avalilable<br>Rent/Lease Options</p>
+              <div class="col s12 m12 l4" style="margin:0 auto;">
+                <p class="white-text uppercase footer-title center-align">Payment Options</p>
+                 <img  style=" display: block; margin: 0 auto; width:300px; !important" src="https://content.screencast.com/users/carolokausp/folders/Jing/media/6577c0b0-afa6-4dfd-aba8-8151d7878204/00000009.png" >
+                <p class="yellow-text center-align font-thin financing">Financing Available<br>Rent / Lease Options</p>
               </div>
-
             </div>
           </div>
+
           <div class="footer-copyright">
             <div class="container">
             © 2014 Copyright Text
             </div>
           </div>
-        </footer>
+      </footer>
