--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,25 +1,38 @@
-<div id="header-wrap">
-  <header id="header" >
-   <div class="row no-margin" id="nav-dektop">
-     <div class="col s12 m12 l12">
-          <div class="mainLogo-wrap">LOGO</div>
-          <div class="phone-number right" >1.888.491.0901</div>
-      </div>
-      <div class="s12">
+<div class="container">
+  <div id="header-wrap">
+    <header id="header" >
+     <div class="row no-margin" id="nav-dektop">
+        <div class="col s12">
+           <nav class="white" id="topLevel-menu" >
+             <div class="button-collapse-wrap">
+             <a href="#!" data-activates="nav-mobile" class="button-collapse"><i class="material-icons icon-yellow">menu</i></a>
+             </div>
 
-        <nav id="topLevel-menu" class="white">
-         <div class="nav-wrapper">
-           <ul class="top-menu left uppercase">
-             <li class="blue-text text-darken-2"><a class="waves-effect waves-yellow active" href="">Home</a></li>
-             <li class=""><a href="">About Us</a></li>
-             <li class=""><a href="">Products</a></li>
-             <li class=""><a href="">Demo Now</a></li>
-             <li class=""><a href="">Contacts</a></li>
-           </ul>
-         </div>
-         </nav>
+             <div class="mainLogo-wrap">
+                <a href="/" target="_self" alt=""><img class="logo" src="http://spiborescopes.com/wp-content/uploads/logo.png"  /></a>
+             </div>
+             <div class="phone-number right hide-on-small-only" >1.888.491.0901</div>
+              <a href="#" data-activates="nav-mobile" class="button-collapse btn-floating btn-large waves-effect waves-light red show-on-small hide-on-med-and-up"><i class="material-icons icon-yellow">call</i></a>
 
+             <div class="nav-content top-menu">
+               <ul class="tabs tabs-transparent left hide-on-med-and-down" style="padding-top:30px;">
+                 <li class="tab"><a class="active" href="">Home</a></li>
+                 <li class="tab"><a  href="">About Us</a></li>
+                 <li class="tab"><a  href="">Products</a></li>
+                 <li class="tab"><a  href="">Demo Now</a></li>
+                 <li class="tab"><a  href="">Contacts</a></li>
+               </ul>
+               <ul  id="nav-mobile" class="side-nav" >
+                 <li><a href=".html">Home</a></li>
+                 <li><a href=".html">About Us</a></li>
+                 <li><a href=".html">Produts</a></li>
+                 <li><a href=".html">Demo Now</a></li>
+                 <li><a href=".html">Contact</a></li>
+               </ul>
+             </div>
+            </nav>
      </div>
-   </div>
-  </header>
+    </div>
+    </header>
+  </div>
 </div>
