--- a/app/views/layouts/_main.html.erb
+++ b/app/views/layouts/_main.html.erb
@@ -1,11 +1,10 @@
 <!-- Section 2 starts Here -->
-<div id="section2">
+<div id="section2" style="margin-top: -50px;">
   <div class="row">
     <div class="col s12 m12 l12">
-
-      <div class="parallax-container" style="width:100%;height:400px;">
-          <div class="parallax">
-            <img src="https://dummyimage.com/1024x400/9e9e9e/0011ff" style="position:relative;">
+     <!-- <div class="parallax-container" style="border: red solid 1px;">
+          <div class="parallax" >
+            <img src="https://content.screencast.com/users/carolokausp/folders/Jing/media/7e04aa20-3b57-44e9-be13-377907c472ac/00000005.png" />
             <div class="caption-slider-top">
                 <h1 class="header-slider">Technology you need<br>at a price you can afford.</h1>
             </div>
@@ -13,19 +12,35 @@
                 <p>Download our Pricing & Product Catalog</p>
             </div>
           </div>
+      </div> -->
+     <div class="container ">
+        <div class="slider slide-height ">
+         <ul class="slides slide-height">
+           <li>
+             <img class="first-img" src="https://content.screencast.com/users/carolokausp/folders/Jing/media/7e04aa20-3b57-44e9-be13-377907c472ac/00000005.png"> <!-- random image -->
+             <div class="caption left">
+                <div class="caption-slider-top">
+                   <h1 class="header-slider">Technology you <span class="font-blue">need</span><br>at a <span class="font-blue">price</span> you can afford.</h1>
+                </div>
+                <div class="caption-slider-bottom">
+                   <p>Download our Pricing & Product Catalog</p>
+               </div>
+             </div>
+           </li>
+         </ul>
       </div>
-
     </div>
   </div>
+  </div>
 </div>
+
 
 
 <div id="section3">
  <div class="container">
    <div class="row">
-       <div class="col s12 m12 l12">
-           <h2>header</h2>
-           <h3>sub-header</h3>
+       <div class="col s12 m12 l12"  style="text-align: center;">
+             <span class="header-wrap"><h2 class="header-1">SPI Products</h2></span>
        </div>
        <div class="col s12 m4 l4">
              <div class="card z-depth-0" >
@@ -33,8 +48,8 @@
                  <img src="https://dummyimage.com/200x250/9e9e9e/0011ff">
                </div>
                <div class="card-content">
-                 <p>Product Name</p>
-                 <p>Product Description</p>
+                 <h3 class="header-2">X1 Series</h3>
+                 <p>Articulating Borescope</p>
                </div>
                <div class="card-action">
                   <a class="btn-floating waves-effect waves-light catalog-call-action" ></a>
@@ -47,8 +62,8 @@
                  <img src="https://dummyimage.com/200x250/9e9e9e/0011ff">
                </div>
                <div class="card-content">
-                 <p>Product Name</p>
-                 <p>Product Description</p>
+                 <h3 class="header-2">MC1 SERIES</h3>
+                 <p>Mechanical Articulation</p>
                </div>
                <div class="card-action">
                   <a class="btn-floating waves-effect waves-light catalog-call-action" ></a>
@@ -61,8 +76,8 @@
                  <img src="https://dummyimage.com/200x250/9e9e9e/0011ff">
                </div>
                <div class="card-content">
-                 <p>Product Name</p>
-                 <p>Product Description</p>
+                 <h3 class="header-2">JCM SERIES</h3>
+                 <p>Pipe Inspection System</p>
                </div>
                <div class="card-action">
                   <a class="btn-floating waves-effect waves-light catalog-call-action" ></a>
@@ -78,29 +93,30 @@
    <div class="container">
         <div class="row">
           <div class="col s12 m12 l12">
-            <h2>Free Demo Program</h2>
-            <h3>Threee Easy Steps</h3>
+            <h2 class="header-white-black"><span class="font-yellow">Free Demo</span> Program</h2>
+            <h3 class="header-white">Three Easy Steps</h3>
           </div>
         </div>
 
           <div class="row">
-            <div class="col s12 m4 l4">
-                     1
-                     <p>Contact Us</p>
+            <div class="col s12 m4 l4" style="text-align:center;">
+                     <span class="easy-steps" >1</span><i class="material-icons icon-yellow medium">stay_primary_portrait</i>
+                     <p class="easy-steps-caption">Contact Us</p>
+
             </div>
-            <div class="col s12 m4 l4">
-                     2
-                     <p>Pick datae & Location</p>
+            <div class="col s12 m4 l4" style="text-align:center;">
+                     <span class="easy-steps" >2</span><i class="material-icons icon-yellow medium">stay_primary_portrait</i>
+                     <p class="easy-steps-caption">Pick date & Location</p>
             </div>
-            <div class="col s12 m4 l4">
-                     4
-                     <p>We Deliver Demo</p>
+            <div class="col s12 m4 l4" style="text-align:center;">
+                     <span class="easy-steps" >3</span><i class="material-icons icon-yellow medium">dialer_sip</i>
+                     <p class="easy-steps-caption">We Deliver Demo</p>
             </div>
           </div>
 
           <div class="row">
-            <div class="col s12 m12 l12">
-              CALL 1-888-491-1067
+           <div class="col m8 offset-m4">
+              <p class="easy-steps-caption-bottom"><span class="text-color-yellow">CALL </span>1-888-491-1067</p>
             </div>
           </div>
     </div>
@@ -111,39 +127,66 @@
 <div id="section4" class="">
    <div class="container">
         <div class="row">
-          <div class="col s12 m12 l12">
-            <h2>The Best Use SPI</h2>
-            <img src="https://dummyimage.com/600x300/9e9e9e/0011ff">
+          <div class="col s12 m12 l12 " style="text-align: center;">
+            <span class="header-wrap"><h2 class="header-1">The Best Use SPI</h2></span>
+            <div class="partners-wrap" style="width:100%;position:relative;">
+                <img style="width:100%;" src="https://content.screencast.com/users/carolokausp/folders/Jing/media/ff865e17-0674-49ec-953c-a99584737b1d/00000011.png">
+            </div>
           </div>
           </div>
     </div>
 </div>
 
-<!-- Section 5 starts Here -->
-<div id="section4" class="yellow">
+<!-- Section 5 starts Here  TESTIMONIALS !!! -->
+<div id="section4" class="dark-yellow">
    <div class="container">
-        <div class="row">
+        <div class="row" style="margin-bottom:0px;">
           <div class="col s12 m12 l12">
-            <h2>Testimonials</h2>
+            <h2 class="header-dark-yellow">Testimonials</h2>
+
                 <div class="carousel carousel-slider center" data-indicators="true">
                    <div class="carousel-fixed-item center">
                    </div>
-                   <div class="carousel-item red white-text" href="#one!"></div>
-                   <div class="carousel-item amber white-text" href="#two!"></div>
+
+                   <div class="carousel-item  white-text" href="#one!">
+                          <!-- <span class="quote">"</span> -->
+                          <p class="white-text testimonial" >"We needed a broescope with the <span class="bold">excellent </br>resolution. The DG1 worked perfectly!</span><br>-Energy servcies provider</p>
+                   </div>
+
+                   <div class="carousel-item white-text" href="#two!">
+                     <p class="white-text testimonial">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy <br>-text ever since the 1500s</p>
+                  </div>
                 </div>
+
+                   <!-- <div class="carousel-arrow">
+                        <a data-slide="prev" href="portfolio_item1.html#myCarousel" class="left carousel-control">
+                            <i class="fa fa-angle-left"></i>
+                        </a>
+                        <a data-slide="next" href="portfolio_item1.html#myCarousel" class="right carousel-control">
+                            <i class="fa fa-angle-right"></i>
+                        </a>
+                    </div> -->
+
             </div>
           </div>
     </div>
 </div>
 
+
+<div class="divider"></div>
+
+
 <!-- Section 5 starts Here -->
 <div id="section5" class="">
-  <div class="container">
-       <div class="row">
-         <div class="col s12 m12 l12">
-         <h3 class="right-align">Download Our Product<br> and Pricing catalog</h3>
-          <form class="col s12">
-            <div class="row">
+  <div class="container ">
+       <div class="row gradient" >
+         <div class="col s12 m12 l12 ">
+            <div class="catalog-wrap" style="width:100%;position:relative;">
+                <img class="materialboxed"  style="width:100%;" src="https://content.screencast.com/users/carolokausp/folders/Jing/media/6e818ed2-3d73-4453-bf47-801d731c91c2/00000008.png">
+                <h3 class=" header-download" style="position:absolute;bottom:-10px;right:170px;text-align:center">Download Our <span class="font-blue">Product</span><br> and <span class="font-blue">Pricing</span> catalog</h3>
+            </div>
+            <form class="col s12">
+            <div class="row" >
                    <div class="input-field col s3 offset-s4">
                      <input id="first_name" type="text" class="validate">
                      <label for="first_name">Name</label>
@@ -163,6 +206,6 @@
          </div>
 
         </div>
-         </div>
+ </div>
 
 </div>
