--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,6 +1,6 @@
 <nav class="nav-extended">
     <div class="nav-wrapper">
-      <ul id="nav-mobile" class="right hide-on-med-and-down">
+      <!-- <ul id="nav-mobile" class="right hide-on-med-and-down">
         <li><a href="sass.html">Sass</a></li>
         <li><a href="badges.html">Components</a></li>
         <li><a href="collapsible.html">JavaScript</a></li>
@@ -18,6 +18,39 @@
         <li class="tab"><a href="#test3">Products</a></li>
         <li class="tab"><a href="#test4">Demo Now</a></li>
         <li class="tab"><a href="#test4">Contact</a></li>
-      </ul>
+      </ul> -->
+
+      <ul id="slide-out" class="side-nav" style="padding-top:30px;">
+         <li><a href="#!">First Sidebar Link</a></li>
+         <li><a href="#!">Second Sidebar Link</a></li>
+         <li class="no-padding">
+           <ul class="collapsible collapsible-accordion">
+             <li>
+               <a class="collapsible-header">Dropdown<i class="material-icons">arrow_drop_down</i></a>
+               <div class="collapsible-body">
+                 <ul>
+                   <li><a href="#!">First</a></li>
+                   <li><a href="#!">Second</a></li>
+                   <li><a href="#!">Third</a></li>
+                   <li><a href="#!">Fourth</a></li>
+                 </ul>
+               </div>
+             </li>
+           </ul>
+         </li>
+       </ul>
+       <ul class="right hide-on-med-and-down">
+         <li><a href="#!">First Sidebar Link</a></li>
+         <li><a href="#!">Second Sidebar Link</a></li>
+         <li><a class="dropdown-button" href="#!" data-activates="dropdown1">Dropdown<i class="material-icons right">arrow_drop_down</i></a></li>
+         <ul id='dropdown1' class='dropdown-content'>
+           <li><a href="#!">First</a></li>
+           <li><a href="#!">Second</a></li>
+           <li><a href="#!">Third</a></li>
+           <li><a href="#!">Fourth</a></li>
+         </ul>
+       </ul>
+      <a href="#" data-activates="slide-out" class="button-collapse"><i class="material-icons">menu</i></a>
+
     </div>
   </nav>
