--- a/app/assets/stylesheets/materialize.scss
+++ b/app/assets/stylesheets/materialize.scss
@@ -40,6 +40,36 @@
 @import "materialize/components/date_picker/default.time";
 
 
+// // @import 'material/animation';
+// // @import 'material/badge';
+// @import 'material/button';
+// // @import 'material/card';
+// // @import 'material/checkbox';
+// // @import 'material/color-definitions';
+// // @import 'material/data-table';
+// // @import 'material/functions';
+// // @import 'material/grid';
+// // @import 'material/icon-toggle';
+// // @import 'material/layout';
+// // @import "material/material-icons";
+// // @import 'material/mega_footer';
+// // @import 'material/mini_footer';
+// // @import 'material/menu';
+// // @import 'material/palette';
+// // @import 'material/progress';
+// // @import 'material/radio';
+// @import 'material/resets';
+// @import 'material/ripple';
+// // @import 'material/roboto';
+// // @import 'material/shadow';
+// // @import 'material/slider';
+// // @import 'material/spinner';
+// // @import 'material/switch';
+// // @import 'material/tabs';
+// // @import 'material/textfield';
+// // @import 'material/tooltip';
+// //@import 'material/typography';
+
 // // bower:scss
 // // endbower
 // @charset "UTF-8";
