--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -3,8 +3,17 @@
           <div class="container">
             <div class="row">
               <div class="col s12 m12 l4">
+
+               <i class="mdi mdi-hexagon mdi-48px"></i>
+               <i class="mdi mdi-hexagon mdi-48px orange"></i>
+               <i class="mdi mdi-bell"></i>  <!-- bell -->
+               <i class="mdi mdi-hexagon mdi-48px orange"></i>
+
                  <p class="uppercase white-text font-thin footer-thin" style="font-size:32px;"><span class="highlight">Find</span> the right tool <br>for your inspection</p>
-                 <div class="social-media"></div>
+                 <div class="social-media">
+                      <i class="mdi mdi-bell"></i>
+                      <i class="mdi mdi-home-modern" aria-hidden="true"></i>
+                 </div>
               </div>
               <div class="col s12 m12 l4">
                 <p class="white-text uppercase footer-title" >Contact Info</p>
