--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,22 +1,36 @@
-<div class="container">
-  <div id="header-wrap">
+ <div id="header-wrap">
+    <div class="container">
     <header id="header" >
-     <div class="row no-margin" id="nav-dektop">
+     <div class="row no-margin" id="nav-dektop" style="padding-bottom:5px;">
         <div class="col s12">
-           <nav class="white" id="topLevel-menu" >
+           <nav  id="topLevel-menu" >
              <div class="button-collapse-wrap">
-             <a href="#!" data-activates="nav-mobile" class="button-collapse"><i class="material-icons icon-yellow">menu</i></a>
+                 <a href="#!" data-activates="nav-mobile" class="button-collapse btn-menu btn-floating">
+                   <i class="material-icons icon-blue">menu</i>
+                 </a>
              </div>
 
              <div class="mainLogo-wrap">
-                <a href="/" target="_self" alt=""><img class="logo" src="http://spiborescopes.com/wp-content/uploads/logo.png"  /></a>
+                <a href="/" target="_self" alt=""><img  class="logo" width="300" height=""  src="http://spiborescopes.com/wp-content/uploads/logo.png"  /></a>
              </div>
-             <div class="phone-number right hide-on-small-only" >1.888.491.0901</div>
-              <a href="#" data-activates="nav-mobile" class="button-collapse btn-floating btn-large waves-effect waves-light red show-on-small hide-on-med-and-up"><i class="material-icons icon-yellow">call</i></a>
+             <div class="phone-number right" >1.888.491.0901</div>
+
+             <div class="iconLogo-wrap">
+               <a href="#" class="btn-floating waves-effect waves-light btn-menu">
+                 <i class="material-icons icon-yellow">http</i>
+               </a>
+             </div>
+
+
+             <div class="phoneNumber-wrap">
+               <a href="#" data-activates="nav-mobile" class="btn-floating waves-effect waves-light btn-menu">
+                 <i class="material-icons icon-yellow">call</i>
+               </a>
+             </div>
 
              <div class="nav-content top-menu">
-               <ul class="tabs tabs-transparent left hide-on-med-and-down" style="padding-top:30px;">
-                 <li class="tab"><a class="active" href="">Home</a></li>
+               <ul class="tabs left hide-on-med-and-down">
+                 <li class="tab"><a class="" href="">Home</a></li>
                  <li class="tab"><a  href="">About Us</a></li>
                  <li class="tab"><a  href="">Products</a></li>
                  <li class="tab"><a  href="">Demo Now</a></li>
@@ -31,8 +45,11 @@
                </ul>
              </div>
             </nav>
-     </div>
-    </div>
+
+
+          </div>
+        </div>
     </header>
+
   </div>
 </div>
