--- a/app/assets/stylesheets/variables.scss
+++ b/app/assets/stylesheets/variables.scss
@@ -1,13 +1,20 @@
 //=== Layout Colors ===
 $primary-color:   #f8b504;      //yellow
 $secondary-color: #0a5f9f;      //blue
-$ternary-color:   #1a1a1a;      //gray
+$ternary-color:   #1a1a1a;      //grey
+$fourth-color:    #eeeeee;     //light-grey
+$fifth-color:     #333333;
+$sixth-color:     #2d76ad;     //lighter-blue
+
+
+$button-floating-background: $secondary-color !default;
+$button-floating-background-hover: $button-floating-background !default;
 
 //===  Menu Colors ===
-$text-content:   #1a1a1a;
-$topmenu-link:   #1a1a1a;
-$topmenu-hover:  #0a5f9f;
-$topmenu-active: #f8b504;
+$text-content:   $ternary-color;
+$topmenu-link:   #333333;
+$topmenu-hover:  $secondary-color;
+$topmenu-active: $primary-color;
 
 //===  Text Colors ===
 $text-color-gray:   $ternary-color;
@@ -31,34 +38,52 @@ $text-font-thin:   'gotham-thin', Verdana, Arial, Sans-serif;
 $text-font-ultra:  'gotham-ultra', Verdana, Arial, Sans-serif;
 $text-font-x-light:'gotham-x-light', Verdana, Arial, Sans-serif;
 
-//===  Sizes ===
 
 
 //=== Header
-$text-large: 70px;
-$text-medium:50px;
+$text-large: 60px;
+$text-medium:40px;
 $text-small: 24px;
+$text-junior:30px;
 $text-tiny:10px;
 
 
-// $screen: "only screen";
-// $small: "only screen and (min-width: #{$small-screen})";
-// $medium: "only screen and (min-width: #{$medium-screen})";
-// $large: "only screen and (min-width: #{$large-screen})";
-// $landscape: "only screen and (orientation: landscape)";
-// $portrait: "only screen and (orientation: portrait)";
+ //=== Screen Customized
+ $large-and-down: "only screen and (max-width : #{$large-screen-up})" !default;
 
 
-// $primary-color: color("materialize-red", "lighten-2") !default;
-//   $primary-color-light: false !default;
-//   $primary-color-dark: false !default;
-//   @if not $primary-color-light {
-//     $primary-color-light: lighten($primary-color, 15%);
-//   }
-//   @if not $primary-color-dark {
-//     $primary-color-dark: darken($primary-color, 15%);
-//   }
-//   $secondary-color: color("teal", "lighten-1") !default;
-//   $success-color: color("green", "base") !default;
-//   $error-color: color("red", "base") !default;
-//   $link-color: color("light-blue", "darken-1") !default;
+// Media Query Ranges
+
+$xsmall-screen: 360px !default;
+$xsmall-screen-up: 361px !default;
+
+//$small-screen: 600px !default;
+//$small-screen-up: 601px !default;
+
+//$medium-screen: 992px !default;
+//$medium-screen-up: 993px !default;
+
+//$large-screen: 1200px !default;
+//$large-screen-up: 1201px !default;
+
+$xlarge-screen: 1400px !default;
+$xlarge-screen-up: 1401px !default;
+
+
+// === AND UP ===
+$xlarge-and-up: "only screen and (min-width : #{$large-screen-up})" !default;
+// $large-and-up: "only screen and (min-width : #{$medium-screen-up})" !default;
+// $medium-and-up: "only screen and (min-width : #{$small-screen-up})" !default;
+ $small-and-up:  "only screen and (min-width : #{$xsmall-screen-up})" !default;
+// $xsmall-and-up: "only screen and (min-width : #{$small-screen-up})" !default;
+
+// === AND DOWN ===
+$xsmall-and-down: "only screen and (max-width : #{$xsmall-screen})" !default;
+// $small-and-down: "only screen and (max-width : #{$small-screen})" !default;
+// $medium-and-down: "only screen and (max-width : #{$small-screen})" !default;
+// $large-and-down:  "only screen and (max-width : #{$small-screen})" !default;
+// $xlarge-and-down:
+
+$large-only: "only screen and (min-width : #{$medium-screen-up}) and (max-width : #{$large-screen})" !default;
+//$medium-only: "only screen and (min-width : #{$small-screen-up}) and (max-width : #{$medium-screen})" !default;
+$small-only: "only screen and (min-width : #{$xsmall-screen-up}) and (max-width : #{$small-screen})" !default;
