--- a/app/views/layouts/_main.html.erb
+++ b/app/views/layouts/_main.html.erb
@@ -1,30 +1,25 @@
 <!-- Section 2 starts Here -->
-<div id="section2" style="margin-top: -50px;">
+<div id="section2" style="margin-top: -20px;">
   <div class="row">
     <div class="col s12 m12 l12">
-     <!-- <div class="parallax-container" style="border: red solid 1px;">
-          <div class="parallax" >
-            <img src="https://content.screencast.com/users/carolokausp/folders/Jing/media/7e04aa20-3b57-44e9-be13-377907c472ac/00000005.png" />
-            <div class="caption-slider-top">
-                <h1 class="header-slider">Technology you need<br>at a price you can afford.</h1>
-            </div>
-            <div class="caption-slider-bottom">
-                <p>Download our Pricing & Product Catalog</p>
-            </div>
-          </div>
-      </div> -->
      <div class="container ">
-        <div class="slider slide-height ">
-         <ul class="slides slide-height">
+        <div class="slider background-effect">
+         <ul class="slides">
            <li>
-             <img class="first-img" src="https://content.screencast.com/users/carolokausp/folders/Jing/media/7e04aa20-3b57-44e9-be13-377907c472ac/00000005.png"> <!-- random image -->
-             <div class="caption left">
+             <img class="first-img" src="https://content.screencast.com/users/carolokausp/folders/Jing/media/45593e7d-5dd4-40be-83df-2d3eddf8e1d0/00000023.png"> <!-- random image -->
+             <div class="caption left" id="spi-caption" >
                 <div class="caption-slider-top">
                    <h1 class="header-slider">Technology you <span class="font-blue">need</span><br>at a <span class="font-blue">price</span> you can afford.</h1>
+
+                   <div class="caption-slider-bottom hide-on-small-and-down">
+                      <p><a href="#"  target="_blank" class="download-catalog" >Download our Pricing & Product Catalog</a><a class="btn-floating waves-effect waves-blue btn-slide" ><i class="material-icons">keyboard_arrow_right</i></a></p>
+                   </div>
+
+                   <div class="btn bc-primary-color spi-call-to-action waves-effect waves-ligh hide-on-med-and-up">
+                     <span>Download Catalog</span>
+                 </div>
+
                 </div>
-                <div class="caption-slider-bottom">
-                   <p>Download our Pricing & Product Catalog</p>
-               </div>
              </div>
            </li>
          </ul>
@@ -38,49 +33,63 @@
 
 <div id="section3">
  <div class="container">
-   <div class="row">
-       <div class="col s12 m12 l12"  style="text-align: center;">
+   <div class="row  clear-50">
+       <div class="col s12 m12 l12 clear-40"  style="text-align: center;">
              <span class="header-wrap"><h2 class="header-1">SPI Products</h2></span>
        </div>
-       <div class="col s12 m4 l4">
-             <div class="card z-depth-0" >
-               <div class="card-image">
-                 <img src="https://dummyimage.com/200x250/9e9e9e/0011ff">
+
+       <div class="col s12 m3 l3">
+             <div class="card z-depth-0 card-hover" >
+               <div class="card-image waves-effect waves-block waves-light  spi-card   ">
+                 <img class="activator" src="https://content.screencast.com/users/carolokausp/folders/Jing/media/b6e595b9-73a9-4a86-a376-2dcb9cec09be/00000016.png">
                </div>
-               <div class="card-content">
-                 <h3 class="header-2">X1 Series</h3>
-                 <p>Articulating Borescope</p>
+               <div class="card-content spi">
+                 <h3 class="header-product-catalog">X1 Series</h3>
+                       <span class="card-title activator grey-text text-darken-4 spi-title">Articulating Borescope</span>
                </div>
-               <div class="card-action">
-                  <a class="btn-floating waves-effect waves-light catalog-call-action" ></a>
+               <div class="card-action spi-card-icon">
+                  <a class="btn-floating waves-effect waves-light catalog-call-action" ><i class="material-icons  icon-yellow">keyboard_arrow_right</i></a>
                </div>
-            </div>
-       </div>
-       <div class="col s12 m4 l4">
-             <div class="card z-depth-0" >
-               <div class="card-image">
-                 <img src="https://dummyimage.com/200x250/9e9e9e/0011ff">
-               </div>
-               <div class="card-content">
-                 <h3 class="header-2">MC1 SERIES</h3>
-                 <p>Mechanical Articulation</p>
-               </div>
-               <div class="card-action">
-                  <a class="btn-floating waves-effect waves-light catalog-call-action" ></a>
+               <div class="card-reveal">
+                 <span class="card-title grey-text text-darken-4">Card Title<i class="material-icons right">close</i></span>
+                 <p>Here is some more information about this product that is only revealed once clicked on.</p>
                </div>
             </div>
        </div>
-       <div class="col s12 m4 l4">
-             <div class="card z-depth-0" >
-               <div class="card-image">
-                 <img src="https://dummyimage.com/200x250/9e9e9e/0011ff">
+
+       <div class="col s12 m3 l3">
+             <div class="card z-depth-0 card-hover  " >
+               <div class="card-image waves-effect waves-block waves-light  spi-card">
+                 <img class="activator" src="https://content.screencast.com/users/carolokausp/folders/Jing/media/98abcbc7-d22c-4df5-b797-23fcc77192d4/00000017.png">
                </div>
-               <div class="card-content">
-                 <h3 class="header-2">JCM SERIES</h3>
-                 <p>Pipe Inspection System</p>
+               <div class="card-content spi">
+                 <h3 class="header-product-catalog">X1 Series</h3>
+                       <span class="card-title activator grey-text text-darken-4 spi-title">Articulating Borescope</span>
                </div>
-               <div class="card-action">
-                  <a class="btn-floating waves-effect waves-light catalog-call-action" ></a>
+               <div class="card-action spi-card-icon">
+                  <a class="btn-floating waves-effect waves-light catalog-call-action" ><i class="material-icons">keyboard_arrow_right</i></a>
+               </div>
+               <div class="card-reveal">
+                 <span class="card-title grey-text text-darken-4">Card Title<i class="material-icons right">close</i></span>
+                 <p>Here is some more information about this product that is only revealed once clicked on.</p>
+               </div>
+            </div>
+       </div>
+        <div class="col s12 m6 l6">
+             <div class="card z-depth-0 card-hover  " >
+               <div class="card-image waves-effect waves-block waves-light  spi-card-large">
+                 <img class="activator" src="https://content.screencast.com/users/carolokausp/folders/Jing/media/7303c464-f615-4a2a-ae13-c948d837d3d9/00000020.png">
+               </div>
+               <div class="card-content spi">
+                 <h3 class="header-product-catalog">JCM Series</h3>
+                       <span class="card-title activator grey-text text-darken-4 spi-title">Pipe Inspection System</span>
+               </div>
+               <div class="card-action spi-card-icon">
+                  <a class="btn-floating waves-effect waves-light catalog-call-action" ><i class="material-icons">keyboard_arrow_right</i></a>
+               </div>
+               <div class="card-reveal">
+                 <span class="card-title grey-text text-darken-4">Card Title<i class="material-icons right">close</i></span>
+                 <p>Here is some more information about this product that is only revealed once clicked on.</p>
                </div>
             </div>
        </div>
@@ -89,16 +98,16 @@
 </div>
 
 <!-- Section 4 starts Here -->
-<div id="section4" class="blue">
+<div id="section4"  >
    <div class="container">
         <div class="row">
           <div class="col s12 m12 l12">
-            <h2 class="header-white-black"><span class="font-yellow">Free Demo</span> Program</h2>
-            <h3 class="header-white">Three Easy Steps</h3>
+            <h2 class="header-demo-program center-align"><span class="font-yellow">Free Demo</span> Program</h2>
+            <h3 class="sub-header-demo-program center-align">NO stress. No hassle. No obligation.</h3>
           </div>
         </div>
 
-          <div class="row">
+          <div class="row  clear-80">
             <div class="col s12 m4 l4" style="text-align:center;">
                      <span class="easy-steps" >1</span><i class="material-icons icon-yellow medium">stay_primary_portrait</i>
                      <p class="easy-steps-caption">Contact Us</p>
@@ -113,21 +122,40 @@
                      <p class="easy-steps-caption">We Deliver Demo</p>
             </div>
           </div>
-
-          <div class="row">
-           <div class="col m8 offset-m4">
-              <p class="easy-steps-caption-bottom"><span class="text-color-yellow">CALL </span>1-888-491-1067</p>
-            </div>
-          </div>
-    </div>
-</div>
+      </div>
+      <div class="section-call-demo-program">
+        <div class="container">
+          <div class="row phone-header">
+              <div class="col s12 m12 l12">
+                 <p class="easy-steps-caption-bottom"><span class="text-color-yellow">CALL </span>1-888-491-1067</p>
+                 <p class="or-demo-program">OR</p>
+                   <form class="col s12">
+                        <div class="input-field col s12 m3 l3 offset-m2 offset-l2">
+                          <input id="first_name" placeholder="First Name" type="text" class="validate">
+                          <label for="first_name">Name</label>
+                         </div>
+                         <div class="input-field col s12 m3 l3">
+                           <input id="email" type="email" placeholder="Email" class="validate">
+                           <label for="email">Email</label>
+                         </div>
+                         <div class="input-field col s12 m3 l3">
+                             <div class="btn bc-primary-color call-to-action-demo-program waves-effect waves-ligh">
+                             <span>Request Demo</span>
+                             </div>
+                         </div>
+                    </form>
+               </div>
+           </div>
+        </div>  <!-- Container Starts Here -->
+       </div><!-- Section Starts Here -->
+    </div> <!-- Section 4 starts Here -->
 
 
 <!-- Section 5 starts Here -->
-<div id="section4" class="">
+<div id="section5" class="">
    <div class="container">
         <div class="row">
-          <div class="col s12 m12 l12 " style="text-align: center;">
+          <div class="col s12 m12 l12" style="text-align: center;">
             <span class="header-wrap"><h2 class="header-1">The Best Use SPI</h2></span>
             <div class="partners-wrap" style="width:100%;position:relative;">
                 <img style="width:100%;" src="https://content.screencast.com/users/carolokausp/folders/Jing/media/ff865e17-0674-49ec-953c-a99584737b1d/00000011.png">
@@ -138,7 +166,7 @@
 </div>
 
 <!-- Section 5 starts Here  TESTIMONIALS !!! -->
-<div id="section4" class="dark-yellow">
+<div id="section6" class="dark-yellow">
    <div class="container">
         <div class="row" style="margin-bottom:0px;">
           <div class="col s12 m12 l12">
@@ -147,15 +175,15 @@
                 <div class="carousel carousel-slider center" data-indicators="true">
                    <div class="carousel-fixed-item center">
                    </div>
+                    <a class="waves-effect waves-light arrow-left"><i class="material-icons  medium ">keyboard_arrow_left</i></a>
+                    <a class="waves-effect waves-light arrow-right"><i class="material-icons  medium ">keyboard_arrow_right</i></a>
 
                    <div class="carousel-item  white-text" href="#one!">
-                          <!-- <span class="quote">"</span> -->
-                          <p class="white-text testimonial" >"We needed a broescope with the <span class="bold">excellent </br>resolution. The DG1 worked perfectly!</span><br>-Energy servcies provider</p>
+                       <p class="white-text testimonial"> We needed a borescope with the <span class="bold">excellent </br>resolution. The DG1 worked perfectly!</span><br>-Energy servcies provider</p>
                    </div>
-
-                   <div class="carousel-item white-text" href="#two!">
+                   <!-- <div class="carousel-item white-text" href="#two!">
                      <p class="white-text testimonial">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy <br>-text ever since the 1500s</p>
-                  </div>
+                   </div> -->
                 </div>
 
                    <!-- <div class="carousel-arrow">
@@ -177,35 +205,48 @@
 
 
 <!-- Section 5 starts Here -->
-<div id="section5" class="">
+<div id="section7" class="">
   <div class="container ">
-       <div class="row gradient" >
-         <div class="col s12 m12 l12 ">
+       <div class="row gradient margin-bottom " >
+           <div class="col s12 m12 l12" style="padding: 0px 0px;text-align: center;" >
+
+           <span class="header-wrap"><h2 class="header-1">Pricing and Product Catalog</h2></span>
+
             <div class="catalog-wrap" style="width:100%;position:relative;">
-                <img class="materialboxed"  style="width:100%;" src="https://content.screencast.com/users/carolokausp/folders/Jing/media/6e818ed2-3d73-4453-bf47-801d731c91c2/00000008.png">
-                <h3 class=" header-download" style="position:absolute;bottom:-10px;right:170px;text-align:center">Download Our <span class="font-blue">Product</span><br> and <span class="font-blue">Pricing</span> catalog</h3>
+                <img  style="width:100%;" src="https://content.screencast.com/users/carolokausp/folders/Jing/media/6c05ec47-9029-4f42-bc9c-b3628edefd60/00000027.png">
+                <h3 class="header-download">Download Our <span class="font-blue">Product</span><br> and <span class="font-blue">Pricing</span> catalog</h3>
             </div>
             <form class="col s12">
+
             <div class="row" >
-                   <div class="input-field col s3 offset-s4">
+                     <div class="input-field col s12 m3 l3 offset-m3 offset-l3">
                      <input id="first_name" type="text" class="validate">
                      <label for="first_name">Name</label>
                     </div>
-                    <div class="input-field col s3">
+                     <div class="input-field col s12 m3 l3">
                       <input id="email" type="email" class="validate">
                       <label for="email">Email</label>
                     </div>
-                    <div class="input-field col s2">
-                        <div class="btn yellow">
+                      <div class="input-field col s12 m3 l3">
+                      <div class="btn bc-primary-color spi-call-to-action waves-effect waves-ligh">
                         <span>Download Now</span>
                         </div>
                     </div>
              </div>
            </form>
-
          </div>
-
         </div>
  </div>
 
 </div>
+
+
+<!--
+<a href="https://github.com/google/material-design-lite/blob/mdl-1.x/templates/android-dot-com/" target="_blank" id="view-source"
+ class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-color--accent mdl-color-text--accent-contrast"
+ data-upgraded=",MaterialButton,MaterialRipple"><i class="material-icons icon-yellow">file_download</i> Download Catalog
+ <span class="mdl-button__ripple-container">
+   <span class="mdl-ripple is-animating" style="width: 255.952px; height: 255.952px; transform: translate(-50%, -50%) translate(46px, 27px);">
+   </span>
+ </span>
+</a> -->
